--- a/index.html
+++ b/index.html
@@ -1,1 +1,46 @@
-"HELLO WORLD" 
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>
+            Dallas Cooper
+        </title>
+    </head>
+    <div class = "section-container" id = "body-section-container">
+        <body>
+            <div class = "content-container" id = "body-content-container">
+                <div class = "section-container" id = "header-section-container">
+                    <header>
+                        <div class = "content-container" id = "header-content-container">
+                            Dallas Cooper
+                            <div class = "section-container" id = "nav-section-container">
+                                <nav>
+                                    <div class = "content-container" id = "nav-content-container">
+                                        <ul>
+                                            <li>Home</li>
+                                            <li>About</li>
+                                            <li>Contact</li>
+                                        </ul>
+                                    </div>
+                                </nav>
+                            </div>
+                        </div>
+                    </header>
+                </div>
+                <div class = "section-container" id = "main-section-container">
+                    <main>
+                        <div class = "content-container" id = "main-content-container">
+                            Content goes here.
+                        </div>
+                    </main>
+                </div>
+                <div class = "section-container" id = "footer-section-container">
+                    <footer>
+                        <div class = "content-container" id = "footer-content-container">
+                            Created by Dallas Cooper
+                        </div>
+                    </footer>
+                </div>
+            </div>
+        </body>
+    </div>
+</html>
